--- a/interfaces/edicion.ui
+++ b/interfaces/edicion.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>958</width>
-    <height>449</height>
+    <width>994</width>
+    <height>648</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,6 +72,9 @@ background-color:gray;
          <property name="currentIndex">
           <number>0</number>
          </property>
+         <property name="documentMode">
+          <bool>true</bool>
+         </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
            <string>Edicion de datos del Dentista</string>
@@ -94,7 +97,7 @@ background-color:gray;
              <property name="styleSheet">
               <string notr="true">QFrame{
 background-color:rgb(70, 130, 169);
-	font: 12pt &quot;Microsoft Sans Serif&quot;;
+	font: 14pt &quot;Microsoft Sans Serif&quot;;
 }
 QTableWidget{
 color:rgb(0,0,0);
@@ -120,6 +123,7 @@ QPushButton{
 border-radius:20px;
 border:2px solid rgb(0,0,0);
 background-color:white;
+	font: 10pt &quot;Microsoft Sans Serif&quot;;
 }
 QPushButton:hover{
 	background-color:#CB4335;
@@ -167,19 +171,6 @@ QPushButton:hover{
                  </widget>
                 </item>
                </layout>
-              </item>
-              <item>
-               <spacer name="verticalSpacer_5">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>20</width>
-                  <height>40</height>
-                 </size>
-                </property>
-               </spacer>
               </item>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_14">
@@ -240,6 +231,19 @@ border: 3px solid rgb(0, 0, 0);
                    </spacer>
                   </item>
                  </layout>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_7">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
                 </item>
                 <item>
                  <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -308,6 +312,19 @@ border: 3px solid rgb(0, 0, 0);
                        </layout>
                       </item>
                      </layout>
+                    </item>
+                    <item>
+                     <spacer name="verticalSpacer_6">
+                      <property name="orientation">
+                       <enum>Qt::Vertical</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>20</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                     </spacer>
                     </item>
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_10">
@@ -379,6 +396,19 @@ border: 3px solid rgb(0, 0, 0);
                        </spacer>
                       </item>
                      </layout>
+                    </item>
+                    <item>
+                     <spacer name="verticalSpacer_7">
+                      <property name="orientation">
+                       <enum>Qt::Vertical</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>20</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                     </spacer>
                     </item>
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -505,6 +535,19 @@ border: 3px solid rgb(0, 0, 0);
                        </spacer>
                       </item>
                      </layout>
+                    </item>
+                    <item>
+                     <spacer name="verticalSpacer_8">
+                      <property name="orientation">
+                       <enum>Qt::Vertical</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>20</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                     </spacer>
                     </item>
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_12">
@@ -692,7 +735,11 @@ border-top:2px solid rgb(0,0,0);
                          </property>
                          <property name="font">
                           <font>
+                           <family>Microsoft Sans Serif</family>
                            <pointsize>10</pointsize>
+                           <weight>50</weight>
+                           <italic>false</italic>
+                           <bold>false</bold>
                           </font>
                          </property>
                          <property name="text">
@@ -833,7 +880,7 @@ border-top:2px solid rgb(0,0,0);
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>958</width>
+     <width>994</width>
      <height>21</height>
     </rect>
    </property>
