--- a/interfaces/menu.ui
+++ b/interfaces/menu.ui
@@ -50,6 +50,9 @@ border:1px solid rgb(0,0,0);
 QTbaleWidget QTableCornerButton::section{
 background-color:rgb(0,0,0);
 border:1px solid  rgb(0,206,151);
+}
+QPushButton{
+	font: 75 11pt &quot;MS Shell Dlg 2&quot;;
 }</string>
       </property>
       <property name="frameShape">
@@ -177,7 +180,10 @@ background-color:rgb(145, 200, 228);
             <item>
              <widget class="QLabel" name="label_10">
               <property name="styleSheet">
-               <string notr="true">font: 26pt &quot;MS Reference Sans Serif&quot;;</string>
+               <string notr="true">QLabel{
+	font: 75 26pt &quot;MS Shell Dlg 2&quot;;
+color:white;
+}</string>
               </property>
               <property name="text">
                <string>Menu principal</string>
@@ -362,6 +368,7 @@ background-color:rgb(145, 200, 228);
              <string notr="true">QFrame{
 background-color:rgb(246, 244, 235);
 border-radius:25px;
+	font: 75 12pt &quot;MS Shell Dlg 2&quot;;
 }
 </string>
             </property>
@@ -391,15 +398,15 @@ border-radius:25px;
                 <widget class="QLabel" name="label">
                  <property name="font">
                   <font>
-                   <family>Verdana</family>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
+                   <family>MS Shell Dlg 2</family>
+                   <pointsize>12</pointsize>
+                   <weight>9</weight>
                    <italic>false</italic>
-                   <bold>true</bold>
+                   <bold>false</bold>
                   </font>
                  </property>
                  <property name="text">
-                  <string>Home</string>
+                  <string>Inicio</string>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignCenter</set>
@@ -457,11 +464,11 @@ background-color:rgb(145, 200, 228);
                 <widget class="QLabel" name="label_6">
                  <property name="font">
                   <font>
-                   <family>Verdana</family>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
+                   <family>MS Shell Dlg 2</family>
+                   <pointsize>12</pointsize>
+                   <weight>9</weight>
                    <italic>false</italic>
-                   <bold>true</bold>
+                   <bold>false</bold>
                   </font>
                  </property>
                  <property name="text">
@@ -524,11 +531,11 @@ background-color:rgb(145, 200, 228);
                 <widget class="QLabel" name="label_7">
                  <property name="font">
                   <font>
-                   <family>Verdana</family>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
+                   <family>MS Shell Dlg 2</family>
+                   <pointsize>12</pointsize>
+                   <weight>9</weight>
                    <italic>false</italic>
-                   <bold>true</bold>
+                   <bold>false</bold>
                   </font>
                  </property>
                  <property name="text">
@@ -592,11 +599,11 @@ background-color:rgb(145, 200, 228);
                 <widget class="QLabel" name="label_8">
                  <property name="font">
                   <font>
-                   <family>Verdana</family>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
+                   <family>MS Shell Dlg 2</family>
+                   <pointsize>12</pointsize>
+                   <weight>9</weight>
                    <italic>false</italic>
-                   <bold>true</bold>
+                   <bold>false</bold>
                   </font>
                  </property>
                  <property name="text">
@@ -659,11 +666,11 @@ background-color:rgb(145, 200, 228);
                 <widget class="QLabel" name="label_9">
                  <property name="font">
                   <font>
-                   <family>Verdana</family>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
+                   <family>MS Shell Dlg 2</family>
+                   <pointsize>12</pointsize>
+                   <weight>9</weight>
                    <italic>false</italic>
-                   <bold>true</bold>
+                   <bold>false</bold>
                   </font>
                  </property>
                  <property name="text">
@@ -727,11 +734,11 @@ background-color:rgb(145, 200, 228);
                 <widget class="QLabel" name="label_15">
                  <property name="font">
                   <font>
-                   <family>Verdana</family>
-                   <pointsize>10</pointsize>
-                   <weight>75</weight>
+                   <family>MS Shell Dlg 2</family>
+                   <pointsize>12</pointsize>
+                   <weight>9</weight>
                    <italic>false</italic>
-                   <bold>true</bold>
+                   <bold>false</bold>
                   </font>
                  </property>
                  <property name="text">
@@ -820,7 +827,7 @@ background-color:rgb(145, 200, 228);
               </property>
               <property name="styleSheet">
                <string notr="true">QLabel{
-font: 75 italic 18px &quot;Hack Nerd Font&quot;;
+	font: 75 14pt &quot;MS Shell Dlg 2&quot;;
 }</string>
               </property>
               <property name="text">
@@ -855,7 +862,7 @@ font: 75 italic 18px &quot;Hack Nerd Font&quot;;
                <enum>QTabWidget::North</enum>
               </property>
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <property name="usesScrollButtons">
                <bool>true</bool>
@@ -1134,6 +1141,12 @@ background-color:rgb(0, 85, 127);
                     <layout class="QHBoxLayout" name="horizontalLayout_5">
                      <item>
                       <widget class="QLabel" name="label_2">
+                       <property name="styleSheet">
+                        <string notr="true">QLabel{
+	font: 75 14pt &quot;MS Shell Dlg 2&quot;;
+color:white;
+}</string>
+                       </property>
                        <property name="text">
                         <string>Pacientes con citas más cercanas</string>
                        </property>
@@ -1258,7 +1271,11 @@ background-color:rgb(0, 85, 127);
                        </property>
                        <property name="font">
                         <font>
-                         <pointsize>9</pointsize>
+                         <family>MS Shell Dlg 2</family>
+                         <pointsize>11</pointsize>
+                         <weight>9</weight>
+                         <italic>false</italic>
+                         <bold>false</bold>
                         </font>
                        </property>
                        <property name="text">
