--- a/interfaces/edicion.ui
+++ b/interfaces/edicion.ui
@@ -137,40 +137,7 @@ QPushButton:hover{
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_10">
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_17">
-                <item>
-                 <spacer name="horizontalSpacer_6">
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="btn_back">
-                  <property name="minimumSize">
-                   <size>
-                    <width>150</width>
-                    <height>50</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string>Volver al menú</string>
-                  </property>
-                  <property name="iconSize">
-                   <size>
-                    <width>100</width>
-                    <height>50</height>
-                   </size>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
+               <layout class="QHBoxLayout" name="horizontalLayout_17"/>
               </item>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_14">
@@ -496,6 +463,8 @@ border: 3px solid rgb(0, 0, 0);
                            <font>
                             <family>Microsoft Sans Serif</family>
                             <pointsize>12</pointsize>
+                            <weight>75</weight>
+                            <bold>true</bold>
                            </font>
                           </property>
                           <property name="styleSheet">
@@ -512,6 +481,8 @@ border: 3px solid rgb(0, 0, 0);
                            <font>
                             <family>Microsoft Sans Serif</family>
                             <pointsize>12</pointsize>
+                            <weight>75</weight>
+                            <bold>true</bold>
                            </font>
                           </property>
                           <property name="text">
@@ -884,7 +855,19 @@ border-top:2px solid rgb(0,0,0);
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuMen">
+    <property name="title">
+     <string>Menú</string>
+    </property>
+    <addaction name="actionBack"/>
+   </widget>
+   <addaction name="menuMen"/>
   </widget>
+  <action name="actionBack">
+   <property name="text">
+    <string>Volver al menú prinicpal</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
