--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -344,7 +344,7 @@ QLabel{
                    </font>
                   </property>
                   <property name="text">
-                   <string>Vista previa</string>
+                   <string>Guardar PDF</string>
                   </property>
                   <property name="iconSize">
                    <size>
@@ -470,7 +470,7 @@ QLabel{
      <x>0</x>
      <y>0</y>
      <width>988</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
