--- a/interfaces/History.ui
+++ b/interfaces/History.ui
@@ -80,7 +80,7 @@ background-color:rgb(0, 85, 127);
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>3</number>
          </property>
          <property name="iconSize">
           <size>
@@ -2496,6 +2496,9 @@ QDateEdit{
                         <height>40</height>
                        </size>
                       </property>
+                      <property name="readOnly">
+                       <bool>true</bool>
+                      </property>
                      </widget>
                     </item>
                    </layout>
@@ -2516,6 +2519,9 @@ QDateEdit{
                         <width>200</width>
                         <height>40</height>
                        </size>
+                      </property>
+                      <property name="readOnly">
+                       <bool>true</bool>
                       </property>
                      </widget>
                     </item>
